change  css file name

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"></script>
   </div>
-  <link rel="stylesheet" type="text/css" href="Home.css">
+  <link rel="stylesheet" type="text/css" href="home.css">
   <title>Satara</title>
 </head>
 
